[project]
name = "py-buaa-login"
version = "0.1.9"
description = "A rather clunky BUAA campus network automation login script (based on Selenium)."
authors = [
    {name = "GGN_2015",email = "neko@jlulug.org"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "~=3.13"
dependencies = [
    "requests (>=2.33.1,<3.0.0)",
    "selenium (>=4.43.0,<5.0.0)",
    "live_chrono (>=1.0.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
